@@ -15,6 +15,8 @@
 * Updated TODO.
 * Added missing named parameters in VariableDefinition class.
 * Added missing named parameters in CalculationDefinition class.
+* Updated test runner.
+* Updated README with links.
 
 2008.04.11
 
